# Twelve

./: .dockerignore  .env  .env.dev  .env.template  .json  Dockerfile  README.md  bot.py  proxy.py  pyproject.toml
.github/workflows/: deploy-image.yml
migrations/versions/: b49551286716_uninfo.py  dccfaa3f1034_drop_session.py
migrations/versions/bilibili/dynamic/: 97b890d49c65_uninfo.py  9a8b6ae112db_initial_revision.py
migrations/versions/bilibili/live/: 4b59404e5d2c_uninfo.py  770b97dd5299_initial_revision.py
migrations/versions/nonebot_plugin_session_orm/: 2e0c173949d3_constraint_name.py  71a72119935f_data_migrate.py  fff55366306e_init_db.py
src/: utils.py
src/plugins/bilibili/: __init__.py  config.py  utils.py
src/plugins/bilibili/plugins/: _utils.py
src/plugins/bilibili/plugins/dynamic/: __init__.py  config.py  models.py
src/plugins/bilibili/plugins/dynamic/templates/: draw.html.j2
src/plugins/bilibili/plugins/live/: __init__.py  blv.py  config.py  models.py
src/plugins/bilibili/plugins/parse/: __init__.py
