[project]
name = ""
version = "0.1.0"
description = "Twelve"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "backoff~=2.2",
    "cachetools~=5.5",
    "nb-cli~=1.4",
    "nonebot2[fastapi,httpx,websockets]~=2.3",
    "nonebot-adapter-onebot~=2.4",
    "nonebot-plugin-alconna~=0.56",
    "nonebot-plugin-apscheduler~=0.5",
    "nonebot-plugin-htmlrender @ https://github.com/ProgramRipper/nonebot-plugin-htmlrender/archive/0f7e2951f91c6ee9329ad16975cbfdbb47504773.zip",
    "nonebot-plugin-orm[default]~=0.7",
    "nonebot-plugin-sentry~=2.0",
    "nonebot-plugin-session~=0.3",
    "nonebot-plugin-session-orm~=0.2",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = [
    "nonebot_plugin_alconna",
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_orm",
    "nonebot_plugin_sentry",
    "nonebot_plugin_session",
    "nonebot_plugin_session_orm",
]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.pdm.dev-dependencies]
dev = [
    "black~=24.10",
    "isort~=5.13",
    "nonebot-plugin-orm[sqlite]~=0.7",
]

[tool.pyright]
enableExperimentalFeatures = true
pythonVersion = "3.12"
pythonPlatform = "Linux"
